# youtube

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTE.rst  LICENCE  README.rst  noxfile.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  contribute.rst  index.rst  usage.rst
docs/source/: conf.py  index.rst
sphinxcontrib/: youtube.py
sphinxcontrib/youtube/: __init__.py  peertube.py  utils.py  vimeo.py  youtube.py
tests/: __init__.py  conftest.py  test_basic.py  test_build.py
tests/roots/test-video/: conf.py  index.rst  peertube.rst  vimeo.rst  youtube.rst
tests/test_build/: peertube.html  peertube.xhtml  vimeo.html  vimeo.xhtml  youtube.html  youtube.xhtml
